--- a/fundamentos/secao-03-introducao-a-html-e-css/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/index.html
@@ -10,7 +10,7 @@
 <h1>Primeira lista de conhecidos na Trybe!</h1>
 <h2>Nesse exercício será necessario fazer edições em html
 para serem apresentadas no navegador em forma de lista. Acompanhe.</h2>
-
+<img src="https://imagens.brasil.elpais.com/resizer/0QXHuUV04jEZenTUg5j29tzRuZE=/1960x1470/arc-anglerfish-eu-central-1-prod-prisa.s3.amazonaws.com/public/TLL6LLHXS4SHHAL7ZTU5RMZN7U.jpg" alt="abraço entre amigos" width="450"
 <p>Ainda não fiz muitos amigos na Trybe,
 mas me lembro de alguns nome com quais
 já conversei e alguns apenas vejo nas reuniões do Zoom.<br><br>
