adicionei img de pasta local

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-01/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-01/index.html
@@ -27,7 +27,7 @@ Alguns deles estão listados abaixo:</p>
 <li>Rafael</li>
 <li>Gustavo</li>
 </ul>
-
+<img src="./lista.jpg" alt="desenho representando lista" width="300" 
 </body>
 
 </html>
