--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-01/index2.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-01/index2.html
@@ -11,8 +11,10 @@
         <li><a href="#vin">Vinicius</a></li>
         <li><a href="#eri">Erickson</a></li>
         <li><a href="#wil">Wilson</a></li>
-        <li><a href="#jul">Juliana</a></li>
+        <li><a href="#Jul">Juliana</a></li>
       </ul>
+
+      <a href="https://www.google.com/webhp?hl=pt-BR&sa=X&ved=0ahUKEwio_uPk4N76AhWaqJUCHeYXBoAQPAgI" target="_blank">Página do Goolgle</a>
 
       <p id="adi"> Mais que amigo, um irmão!!!</p>
       <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
