explorando propriedades de fontes

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-02/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-02/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <title>HTML</title>
     <style>
-        h1 {
-            font-size: 65px;
-            color: orange;
+        h1{
+            font-family: sans-serif;
+            line-height: 45px;
+            text-align: calc(80);
+        
         }
-        #un-list {
-            background-color: blue;
+        p{
+            font-weight: 600;
+        }
+        body{
+            font-size: 16px;
         }
     </style>
   </head>
   <body>
-    <h1>Frutas</h1>
-    <p>Qual é a sua fruta favorita?</p>
-    <ul id="un-list">
-      <li>Maçã</li>
-      <li>Banana</li>
-      <li>Goiaba</li>
+    <h1>Cores</h1>
+    <p>Qual é a sua cor favorita?</p>
+    <ul>
+      <li>Amarelo</li>
+      <li>Vermelho</li>
+      <li>Marrom</li>
     </ul>
   </body>
 </html>
