troquei cores de fundo das palavras

--- a/fundamentos/secao-03-introducao-a-html-e-css/dia-02/index.html
+++ b/fundamentos/secao-03-introducao-a-html-e-css/dia-02/index.html
@@ -7,7 +7,7 @@
         h1{
             font-family: sans-serif;
             line-height: 45px;
-            text-align: calc(80);
+            
         
         }
         p{
@@ -16,15 +16,24 @@
         body{
             font-size: 16px;
         }
+        #yellow{
+            background-color: yellow;
+        }
+        #red{
+            background-color: red;
+        }
+        #brown{
+            background-color: brown;
+        }
     </style>
   </head>
   <body>
     <h1>Cores</h1>
     <p>Qual é a sua cor favorita?</p>
     <ul>
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="yellow">Amarelo</li>
+      <li id="red">Vermelho</li>
+      <li id="brown">Marrom</li>
     </ul>
   </body>
 </html>
